
syntax = "proto2";
package panda;

message TaintQueryUniqueLabelSet {
    required uint64 ptr = 1;
    repeated uint32 label = 2;
}
message SrcInfo {
    required string filename = 1;
    required uint32 linenum = 2;
    required string astnodename = 3;
}
message TaintQuery {
    required uint64 ptr = 1;
    required uint32 tcn = 2;
    required uint32 offset = 3;
}
message AttackPoint {
    required string info = 1;
}
message TaintQueryHypercall {
    required uint64 buf = 1;
    required uint32 len = 2;
    repeated uint32 data = 3;
    required uint32 num_tainted = 4;
}
message Process {
    required uint32 pid = 1;
    required string name = 2;
}
message NtCreateUserProcess {
    required Process cur_p = 1;
    required Process new_p = 2;
    required string new_long_name = 3;
}
message NtTerminateProcess {
    required Process cur_p = 1;
    required Process term_p = 2;
}
message ProcessFile {
    required Process proc = 1;
    required string filename = 2;
}
message ProcessKey {
    required Process proc = 1;
    required string keyname = 2;
}
message ProcessKeyValue {
    required ProcessKey pk = 1;
    required string value_name = 2;
}
message ProcessKeyIndex {
    required ProcessKey pk = 1;
    required uint32 index = 2;
}


message LogEntry {

required uint64 pc = 1;    
required uint64 instr = 2;

repeated float dead_data = 32;
optional TaintQueryUniqueLabelSet taint_query_unique_label_set = 33;
optional TaintQuery taint_query = 34;
optional SrcInfo src_info = 35;
optional TaintQueryHypercall taint_query_hypercall = 38;
optional AttackPoint attack_point = 39;
repeated uint64 callstack = 10;
optional bool tainted_branch = 36;
optional uint64 asid = 3; 
optional string process_name = 4;
optional uint32 process_id = 5;
optional uint64 taint_label_virtual_addr = 6;
optional uint64 taint_label_physical_addr = 7;
optional uint32 taint_label_number = 8;
optional Process new_pid = 11;
optional NtCreateUserProcess nt_create_user_process = 12;
optional NtTerminateProcess nt_terminate_process = 13;
optional ProcessFile nt_create_file = 14;
optional ProcessFile nt_read_file = 15;
optional ProcessFile nt_delete_file = 16;
optional ProcessFile nt_write_file = 17;
optional ProcessKey nt_create_key = 18;
optional ProcessKey nt_create_key_transacted = 19;
optional ProcessKey nt_open_key = 20;
optional ProcessKey nt_open_key_ex = 21;
optional ProcessKey nt_open_key_transacted = 22;
optional ProcessKey nt_open_key_transacted_ex = 23;
optional ProcessKey nt_delete_key = 24;
optional ProcessKey nt_query_key = 25;
optional ProcessKeyValue nt_query_value_key = 27;
optional ProcessKeyValue nt_delete_value_key = 28;
optional ProcessKeyIndex nt_enumerate_key = 29;
optional ProcessKeyIndex nt_enumerate_value_key = 30;
optional ProcessKeyValue nt_set_value_key = 31;
optional bool tainted_instr = 37;

}
